# client-py

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  run_tests.py
.github/workflows/: test.yml
src/skytable_py/: __init__.py  config.py  connection.py  exception.py  protocol.py  query.py  response.py
tests/: __init__.py  test_config.py  test_encoding.py  test_protocol.py  test_query.py  test_response.py
